sand-macros/tests/cases/fail_raw_string.rs
use sand_macros::function;

#[function]
fn bad() {
    "say hello";
}

fn main() {}
